# vk-moder-bot

./: README.md  main.py  pyproject.toml
