[tool.poetry]
name = "vk-moder-bot"
version = "0.1.0"
description = ""
authors = ["SuperSuslik312 <SuperSuslik312@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
vk-api = {git = "https://github.com/python273/vk_api.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
